[tool.poetry]
name = "web-hw5"
version = "0.1.0"
description = ""
authors = ["Dmitriy <kylishovdimka@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
websockets = "^12.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
